# rust_ai_practice

message_threads/: Cargo.toml
message_threads/src/: main.rs
rust_backend/: .env  Cargo.toml
rust_backend/src/: handlers.rs  main.rs  models.rs
rust_backend/tests/: integration_test.rs
